--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,25 @@ jobs:
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: python quit_smoking_bot.py
+
+      - name: Success Notification to Discord
+        if: success()
+        run: |
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d '{"content": "✅ 금연 봇 트윗 성공! 오늘도 무사히 한 걸음 나아갔습니다."}' \
+               ${{ secrets.DISCORD_WEBHOOK_URL }}
+
+      - name: Failure Notification to Discord
+        if: failure()
+        run: |
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d '{"content": "⚠️ **금연 봇 실행 실패!**\n트윗이 올라가지 않았습니다. 로그를 확인하세요: https://github.com/${{ github.repository }}/actions"}' \
+               ${{ secrets.DISCORD_WEBHOOK_URL }}
+
       - name: Commit and Push last ID
+        if: success() # 성공했을 때만 ID를 업데이트합니다.
         run: |
           git config --global user.name "GitHub Action Bot"
           git config --global user.email "actions@github.com"
