--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: academies/setup-python@v4
+        uses: actions/setup-python@v4  # 'academies'에서 'actions'로 수정
         with:
           python-version: '3.9'
 
